# EyeOS

./: README  renovate.json
eyeOS/branches/1.8/: index.php  settings.php
eyeOS/tags/: eyeOS_1.9.0.2-2.eyepackage  eyeOS_1.9.0.2-3.eyepackage  eyeOS_1.9.0.2-4.eyepackage  eyeOS_1.9.0.2-5.eyepackage
eyeOS/tags/1.0.0.3/: index.php  settings.php
eyeOS/tags/1.2.0.0/: index.php  settings.php
eyeOS/tags/1.5.0.0/: index.php  license.txt  settings.php
eyeOS/tags/1.6.0.0/: settings.php
eyeOS/trunk/: index.php  licensing.txt  settings.php  testapi.html
eyePlanet/trunk/: .htaccess  index.php  settings.php
eyeTetravex/: eyeTetravex.fla  eyeTetravex.html
eyeUploadX/: eyeuploadx.fla  eyeuploadx.html
eyeUploadX/src/: EyeUploadX.as  Message.as  Question.as
graphics/: README.txt
graphics/Doowee/: doowee.svgz
graphics/images/: slider_e-w.svgz  slider_n-s.svgz
graphics/login/: bg.svgz  bg_newuser.svgz
graphics/logo/: eyeoslogo.svgz  logo.svgz  logo_hq.svgz  logo_hq_b_s.svgz
graphics/wallpaper/: 1_9.svgz
kio_eyeos/: CMakeLists.txt
kio_eyeos/src/: CMakeLists.txt  eyeos.cpp  eyeos.h  eyeos.protocol
playground/eyeToDo/: app.eyecode  events.eyecode
playground/eyeXML/: main.eyecode
playground/hp/: BaseWidgets.js  Sortabletable.eyecode  eyeMediaVault.js  eyeSAWASC-0.3.eyepackage
playground/jcn/: eyeDesigner.eyepackage
playground/lk/: utf8.php
playground/registry/: registry.eyecode
translations/cleaner/: index.php  lib.php  xml.php
translations/creator/: TODO.txt  i18n.php  init.php
translations/legacy/: translate1600.eyepackage
(+7225 files in other folders)
